# GeneralsGameCode

./: .gitignore  build_run_mac.sh
.agent/: NEXT_STEPS_PROMPT_V2.md  NEXT_STEPS_PROMPT_V3.md
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: GameDefines.h
Core/GameEngine/Include/GameClient/: WindowVideoManager.h
Core/GameEngine/Include/GameNetwork/: LANAPI.h
Core/GameEngine/Source/GameClient/: GameText.cpp
Core/GameEngine/Source/GameNetwork/: FirewallHelper.cpp
Core/GameEngineDevice/Include/W3DDevice/: MacOSHardwareProfile.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/Libraries/Include/Lib/: BaseType.h
Core/Libraries/Source/debug/: debug_debug.h
Core/Libraries/Source/profile/: profile_funclevel.h
Platform/MacOS/: CMakeLists.txt
Platform/MacOS/Include/: MacOSAudioManager.h  MacOSDebugLog.h  StdKeyboard.h  StdMouse.h  d3dx8core.h
Platform/MacOS/Source/Audio/: MacOSAudioManager.mm
Platform/MacOS/Source/Client/: MacOSDisplay.mm  MacOSDisplayString.mm
Platform/MacOS/Source/Common/: StdLocalFileSystem.cpp
Platform/MacOS/Source/Main/: D3DXStubs.mm  MacOSDisplayManager.h  MacOSMain.mm  (+6 more)
Platform/MacOS/Tests/: CMakeLists.txt  test_blend_state.cpp  test_captured_textures.cpp  test_color_conversion.cpp  test_device_caps.cpp  test_fog_formulas.cpp  test_fvf_layout.cpp  test_main.cpp  test_pixel_conversion.cpp  test_render_state.cpp  test_sampler_state.cpp  test_texture_format.cpp  test_tree_shader.cpp  test_tss_formulas.cpp  test_uniform_packing.cpp
Platform/MacOS/docs/: RENDERING.md  STUBS_AUDIT.md
(+89 files in other folders)
